// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IframeContentRenderer should render 1`] = `
<div>
  <div
    style="width: 100%; height: 100%;"
  >
    <iframe
      src="http://localhost/perseus/frame?emulate-mobile=false&frame-id=0&lint-gutter=true"
      style="width: 100%; height: 100%;"
    />
  </div>
</div>
`;

exports[`IframeContentRenderer should render 2`] = `
<div>
  <div
    style="width: 100%; height: 100%;"
  >
    <iframe
      src="http://localhost/perseus/frame?emulate-mobile=false&frame-id=1&lint-gutter=true"
      style="width: 100%; height: 100%;"
    />
  </div>
</div>
`;

exports[`IframeContentRenderer should set  1`] = `
<div>
  <div
    style="width: 100%; height: 100%;"
  >
    <iframe
      src="http://localhost/perseus/frame?emulate-mobile=false&frame-id=1&lint-gutter=true"
      style="width: 100%; height: 100%;"
    />
  </div>
</div>
`;

exports[`IframeContentRenderer should set if 1`] = `
<div>
  <div
    style="width: 100%; height: 100%;"
  >
    <iframe
      src="http://localhost/perseus/frame?emulate-mobile=false&frame-id=1&lint-gutter=true"
      style="width: 100%; height: 100%;"
    />
  </div>
</div>
`;

exports[`IframeContentRenderer should set ifram 1`] = `
<div>
  <div
    style="width: 100%; height: 100%;"
  >
    <iframe
      src="http://localhost/perseus/frame?emulate-mobile=false&frame-id=1&lint-gutter=true"
      style="width: 100%; height: 100%;"
    />
  </div>
</div>
`;

exports[`IframeContentRenderer should set iframe. 1`] = `
<div>
  <div
    style="width: 100%; height: 100%;"
  >
    <iframe
      src="http://localhost/perseus/frame?emulate-mobile=false&frame-id=1&lint-gutter=true"
      style="width: 100%; height: 100%;"
    />
  </div>
</div>
`;

exports[`IframeContentRenderer should set iframe.src  1`] = `
<div>
  <div
    style="width: 100%; height: 100%;"
  >
    <iframe
      src="http://localhost/perseus/frame?emulate-mobile=false&frame-id=1&lint-gutter=true"
      style="width: 100%; height: 100%;"
    />
  </div>
</div>
`;

exports[`IframeContentRenderer should set iframe.src 1`] = `
<div>
  <div
    style="width: 100%; height: 100%;"
  >
    <iframe
      src="http://localhost/perseus/frame?emulate-mobile=false&frame-id=1&lint-gutter=true"
      style="width: 100%; height: 100%;"
    />
  </div>
</div>
`;

exports[`IframeContentRenderer should set iframe.src when  1`] = `
<div>
  <div
    style="width: 100%; height: 100%;"
  >
    <iframe
      src="http://localhost/perseus/frame?emulate-mobile=false&frame-id=1&lint-gutter=true"
      style="width: 100%; height: 100%;"
    />
  </div>
</div>
`;

exports[`IframeContentRenderer should set iframe.src when on 1`] = `
<div>
  <div
    style="width: 100%; height: 100%;"
  >
    <iframe
      src="http://localhost/perseus/frame?emulate-mobile=false&frame-id=1&lint-gutter=true"
      style="width: 100%; height: 100%;"
    />
  </div>
</div>
`;

exports[`IframeContentRenderer should set iframe.src when only p 1`] = `
<div>
  <div
    style="width: 100%; height: 100%;"
  >
    <iframe
      src="http://localhost/perseus/frame?emulate-mobile=false&frame-id=1&lint-gutter=true"
      style="width: 100%; height: 100%;"
    />
  </div>
</div>
`;

exports[`IframeContentRenderer should set iframe.src when only path p 1`] = `
<div>
  <div
    style="width: 100%; height: 100%;"
  >
    <iframe
      src="http://localhost/perseus/frame?emulate-mobile=false&frame-id=1&lint-gutter=true"
      style="width: 100%; height: 100%;"
    />
  </div>
</div>
`;

exports[`IframeContentRenderer should set iframe.src when only path pro 1`] = `
<div>
  <div
    style="width: 100%; height: 100%;"
  >
    <iframe
      src="http://localhost/perseus/frame?emulate-mobile=false&frame-id=1&lint-gutter=true"
      style="width: 100%; height: 100%;"
    />
  </div>
</div>
`;

exports[`IframeContentRenderer should set iframe.src when only path provide 1`] = `
<div>
  <div
    style="width: 100%; height: 100%;"
  >
    <iframe
      src="http://localhost/perseus/frame?emulate-mobile=false&frame-id=1&lint-gutter=true"
      style="width: 100%; height: 100%;"
    />
  </div>
</div>
`;

exports[`IframeContentRenderer should set iframe.src when only path provided 1`] = `
<div>
  <div
    style="width: 100%; height: 100%;"
  >
    <iframe
      src="http://localhost/perseus/frame?emulate-mobile=false&frame-id=1&lint-gutter=true"
      style="width: 100%; height: 100%;"
    />
  </div>
</div>
`;
